Make sure the navigation sidebar is still in the right position when sections are collapsed.

--- a/scss/partials/_navigation_sidebar.scss
+++ b/scss/partials/_navigation_sidebar.scss
@@ -252,7 +252,9 @@ div.left-navigation-sidebar {
 
   &.absolute-position {
     position: absolute;
+    top: 0;
     overflow-y: visible;
+    overflow: visible;
   }
 
   @media screen and (max-width: 975px) {
